group work tension

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1247,6 +1247,7 @@ The following summary table lists barriers and tensions drawn from the literatur
 | **Barrier / Tension**| **Description** | **Related Intervention**         
 |--------|------------|--------------|
 | Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
+| Unfamiliarity with group project management  | Tensions arising through group miscommunication in P1     |  Avoiding large groups from P2 onwards, adn starting with a half-baked game template which individuals or pair used as a base. |   
 | Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
 | Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  | A starting template with much of the needed code in place, facilitator explanation when concepts are met in-situ, supporting documentation to reinforce previous experimentation   |
 | Lack of direct knowledge of game making conventions and experience of game analysis  | e.g. common game programming patterns    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
