organising end section

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1202,16 +1202,18 @@ Affordances within the domain of HCI research -->
 ### Discussion on authenticity and agency concerning tools and resources  
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
 
-This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used include code authoring environment, supporting resources of printed and digital format. This section begins to analyse these tensions in more depth, it also explores the value and implications of my choice to privilege authenticity of tool choice in this design in relation to concepts of participant agency. Introducing additional tools in the form of documentation to the initial coding environment and template provided in early stages introduced tensions between the opportunities for independent development and the additional complexity of the process. The concept of dual stimulation can help illuminate these tensions. Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli. Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings. Similarly, Sannino [@sannino_formative_2016] highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency.
+This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used include code authoring environment, supporting resources of printed and digital format. This section begins to analyse these tensions in more depth, in particular the intersection of authenticity in tool use and participant agency.
+
+Design decisions of tool use can to increase agency in practical terms by providing affordances or by removing barriers to use. Conceptually these practical dimension can be framed as instrumental agency or removing aspects of negative liberty caused by technical barriers [@matusov_mapping_2016, p. 433]. I will also explore the use more authentic toolsets and the potential for engendering transformative agency [@engestrom2006development; @haapasaari_emergence_2016; @sannino_formative_2016].
+
+
+Introducing additional tools in the form of documentation to the initial coding environment and template provided in early stages introduced tensions between the opportunities for independent development and the additional complexity of the process.
+
+The concept of dual stimulation can help illuminate these tensions. Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli. Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings. Similarly, Sannino [@sannino_formative_2016] highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency.
 
 <!-- While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency. -->
 
 <!-- _lifting the hood_ (see LR) -->
-
-The previous section can be viewed from perspective of designing coding tools to increase agency in practical terms by providing affordances to achieve common design aims and thought removing barriers or aspects of negative liberty [@matusov_mapping_2016, p. 433]. In addition, I propose that the process of using more authentic toolsets has the potential for engendering transformative agency [@engestrom2006development; @haapasaari_emergence_2016; @sannino_formative_2016].
-
-
-
 <!-- The distributed nature of the toolset used helped build authentic digital literacy skills. Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of these individual actions.  -->
 
 The distributed nature of the toolset used helped build authentic digital literacy skills. Participants became adapt at thus transforming chains of actions into a fluid operation. Learners who had mastered the skills were asked by others for help, becoming domain experts, and thus providing additional affordances in the learning community.
@@ -1234,7 +1236,6 @@ Turning to broader, non-instrumental conceptions of agency, conversations betwee
     Pearl: You just take things for granted don’t you?
 
 
-
 In summary, this chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles. However, some barriers involving social and cultural factors suited interventions of other pedagogies. In later chapters I explore the interaction between authenticity and agency in more depth using the emerging pedagogies as an analytical lens.
 
 <!-- Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain. -->
@@ -1249,7 +1250,7 @@ The following summary table lists barriers and tensions drawn from the literatur
 | **Barrier / Tension**| **Description** | **Related Intervention**         
 |--------|------------|--------------|
 | Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
-| Unfamiliarity with group project management  | Tensions arising through group miscommunication in P1     |  Avoiding large groups from P2 onwards, adn starting with a half-baked game template which individuals or pair used as a base. |   
+| Unfamiliarity with group project management  | Tensions arising through group miscommunication in P1     |  Avoiding large groups from P2 onwards, and starting with a half-baked game template which individuals or pair used as a base. |   
 | Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
 | Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  | A starting template with much of the needed code in place, facilitator explanation when concepts are met in-situ, supporting documentation to reinforce previous experimentation   |
 | Lack of direct knowledge of game making conventions and experience of game analysis  | e.g. common game programming patterns    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
